Updated tmux configuration for show-temp script. Removed old configuration for RVM

--- a/_tools/_tmux.conf
+++ b/_tools/_tmux.conf
@@ -24,7 +24,7 @@ set -g status-bg red
 set -g status-fg black
 set -g status-interval 30
 set -g status-left-length 50 
-set -g status-left '#[fg=white] #(sensors | grep -i "CPU Temp" | cut -d" " -f6)|#(show-mem)'
+set -g status-left '#[fg=white] #(show-temp)|#(show-mem)'
 set -g status-right '#[bg=black]#[fg=red] [ %m/%d %H:%M ]'
 
 setw -g mode-bg red
