--- a/_tools/_tmux.conf
+++ b/_tools/_tmux.conf
@@ -13,7 +13,7 @@ bind C-a send prefix
 bind r source-file  ~/.tmux.conf
 set -g history-limit 5000
 setw -g mode-keys emacs
-setw -g mode-mouse on
+setw -g mode-mouse off
 set -g visual-bell on
 
 # Theme ( in order to show the  CPU temperature requires the lm-sensors package )
