Emacs ruby mode. New tmux configuration

--- a/_tools/_tmux.conf
+++ b/_tools/_tmux.conf
@@ -1,6 +1,5 @@
 set -g set-titles on
-
-
+set-option -g set-titles-string "tmux:#I [ #W ]"
 # In order to use scripts these have to be in a folder in the PATH variable.
 # Binding like screen
 
@@ -8,6 +7,9 @@ unbind C-b
 set -g prefix C-a
 bind C-a send prefix
 
+# Custom command bindings
+bind 'e' new-window "exec vi ~/.tmux.conf"
+bind 'g' new-window "exec ssh git@sgmac.com"
 
 # Default options
 bind r source-file  ~/.tmux.conf
@@ -15,27 +17,53 @@ set -g history-limit 5000
 setw -g mode-keys emacs
 setw -g mode-mouse off
 set -g visual-bell on
+set -g base-index 1
+
 
 # Theme ( in order to show the  CPU temperature requires the lm-sensors package )
 
 set -g message-bg black
-set -g message-fg white
-set -g status-bg red
-set -g status-fg black
+set -g message-fg green
+set -g message-attr bright
+
+# Status colors
+set -g status-bg black
+set -g status-fg white
+set -g status-attr bright
+
 set -g status-interval 30
 set -g status-left-length 50 
-set -g status-left '#[fg=white] #(show-temp)|#(show-mem)'
-set -g status-right '#[bg=black]#[fg=red] [ %m/%d %H:%M ]'
+
+# Status bar position and what to show (scripts)
+set -g status-justify centre
+set -g status-left '#[fg=black]» #[fg=green,bold]#T# #[fg=white] #(show-temp)|#(show-mem)'
+set -g status-right '#[bg=black]#[fg=green,bold] [%m/%d %H:%M]'
+
+
+# Active window title colors (default: white, default, bright (= bold))
+set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-attr bright
+
+
+# panes:
+set-option -g pane-border-fg white
+set-option -g pane-border-bg default
+set-option -g pane-active-border-fg red
+set-option -g pane-active-border-bg default
+
+
 
 setw -g mode-bg red
 setw -g mode-attr bright
 setw -g mode-fg white
 setw -g monitor-activity on
 set -g visual-activity on
-setw -g window-status-current-fg white
+
+setw -g window-status-current-fg green
 setw -g window-status-current-attr bright
 setw -g window-status-current-bg black
 
-# DISABLED
-#setw -g window-status-fg white
+# Disabled
+#setw -g window-status-fg red
 #setw -g window-status-bg black
