--- a/_tools/_tmux.conf
+++ b/_tools/_tmux.conf
@@ -9,7 +9,7 @@ bind C-a send prefix
 
 # Custom command bindings
 bind 'e' new-window "exec vi ~/.tmux.conf"
-bind 'g' new-window "exec ssh git@sgmac.com"
+bind 'g' new-window "exec ssh deploys@sgmac.com"
 
 # Default options
 bind r source-file  ~/.tmux.conf
