Keybinding for tmux configuration.

--- a/_tools/_tmux.conf
+++ b/_tools/_tmux.conf
@@ -7,6 +7,8 @@ unbind C-b
 set -g prefix C-a
 bind C-a send prefix
 
+# Copy into the X clipboard
+bind-key C-C run 'tmux show-buffer|xsel -pbi'
 # Custom command bindings
 bind 'e' new-window "exec vi ~/.tmux.conf"
 bind 'g' new-window "exec ssh deploys@sgmac.com"
