Next,previous window screen like

--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -12,6 +12,8 @@ bind-key C-C run 'tmux show-buffer|xsel -pbi'
 # Custom command bindings
 bind 'e' new-window "exec vi ~/.tmux.conf"
 bind 'g' new-window "exec ssh deploys@sgmac.com"
+bind C-n next-window
+bind C-p previous-window
 
 # Default options
 bind r source-file  ~/.tmux.conf
