--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -5,7 +5,7 @@ set-option -g set-titles-string "tmux:#I [ #W ]"
 
 unbind C-b
 set -g prefix C-a
-bind C-a send prefix
+bind C-a send-prefix
 
 # Copy into the X clipboard
 bind-key C-C run 'tmux show-buffer|xsel -pbi'
@@ -16,9 +16,9 @@ bind C-n next-window
 bind C-p previous-window
 
 # Default options
-bind r source-file  ~/.tmux.conf
+bind r source-file  ~/.tmux.conf \; Display "Reloaded!"
 set -g history-limit 5000
-setw -g mode-keys emacs
+setw -g mode-keys vi
 setw -g mode-mouse off
 set -g visual-bell on
 set -g base-index 1
@@ -68,6 +68,17 @@ setw -g window-status-current-fg green
 setw -g window-status-current-attr bright
 setw -g window-status-current-bg black
 
+# Resizing pane
+
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+
 # Disabled
 #setw -g window-status-fg red
 #setw -g window-status-bg black
+#bind | split-window -h
+#bind - split-window -v
+
