Corrected some typos

--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -1,4 +1,4 @@
-set -g set-titles on
+set -g set-titles 
 set-option -g set-titles-string "tmux:#I [ #W ]"
 # In order to use scripts these have to be in a folder in the PATH variable.
 # Binding like screen
@@ -16,7 +16,7 @@ bind C-n next-window
 bind C-p previous-window
 
 # Default options
-bind r source-file  ~/.tmux.conf \; Display "Reloaded!"
+bind r source-file  ~/.tmux.conf
 set -g history-limit 5000
 setw -g mode-keys vi
 setw -g mode-mouse off
