--- a/.gitmodules
+++ b/.gitmodules
@@ -56,3 +56,6 @@
 [submodule "default/vim/bundle/vim-airline"]
 	path = default/vim/bundle/vim-airline
 	url = https://github.com/bling/vim-airline
+[submodule "default/vim/bundle/ctrlp"]
+	path = default/vim/bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim
