Pane base index set to 1

--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -22,7 +22,7 @@ setw -g mode-keys vi
 setw -g mode-mouse off
 set -g visual-bell on
 set -g base-index 1
-
+setw -g pane-base-index 1
 
 # Theme ( in order to show the  CPU temperature requires the lm-sensors package )
 
