--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,9 @@
 [submodule "default/vim/bundle/ctrlp"]
 	path = default/vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim
+[submodule "default/vim/bundle/ultisnips"]
+	path = default/vim/bundle/ultisnips
+	url = git://github.com/SirVer/ultisnips.git
+[submodule "default/vim/bundle/vim-snippets"]
+	path = default/vim/bundle/vim-snippets
+	url = https://github.com/honza/vim-snippets.git
