Remove temp and mem scripts from bar

--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -40,7 +40,7 @@ set -g status-left-length 50
 
 # Status bar position and what to show (scripts)
 set -g status-justify centre
-set -g status-left '#[fg=black]» #[fg=green,bold]#T# #[fg=white] #(show-temp)|#(show-mem)'
+set -g status-left '#[fg=black]» #[fg=green,bold]#T# #[fg=white]'
 set -g status-right '#[bg=black]#[fg=green,bold] [%m/%d %H:%M]'
 
 
