--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -9,22 +9,20 @@ bind C-a send-prefix
 
 # Copy into the X clipboard
 bind-key C-C run 'tmux show-buffer|xsel -pbi'
+
 # Custom command bindings
 bind 'e' new-window "exec vi ~/.tmux.conf"
-bind 'g' new-window "exec ssh deploys@sgmac.com"
 bind C-n next-window
 bind C-p previous-window
 
 # Default options
 bind r source-file  ~/.tmux.conf
 set -g history-limit 5000
-setw -g mode-keys vi
+#setw -g mode-keys vi
 setw -g mode-mouse off
 set -g visual-bell on
 set -g base-index 1
 setw -g pane-base-index 1
-
-# Theme ( in order to show the  CPU temperature requires the lm-sensors package )
 
 set -g message-bg black
 set -g message-fg green
@@ -77,8 +75,15 @@ bind -r L resize-pane -R 5
 
 
 # Disabled
-#setw -g window-status-fg red
-#setw -g window-status-bg black
-#bind | split-window -h
-#bind - split-window -v
+# setw -g window-status-fg red
+# setw -g window-status-bg black
+# bind C-v split-window -h
+# bind C-s split-window -v
 
+# Vim-tmux navigator plugin
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+#bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
