--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -80,6 +80,12 @@ bind -r L resize-pane -R 5
 # bind C-v split-window -h
 # bind C-s split-window -v
 
+# bind v split-window -h
+# bind s split-window -v
+# unbind '"'
+# unbind %
+set-option -g allow-rename off
+
 # Vim-tmux navigator plugin
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
