--- a/default/tmux.conf
+++ b/default/tmux.conf
@@ -1,25 +1,31 @@
 set -g set-titles 
-set-option -g set-titles-string "tmux:#I [ #W ]"
+# set-option -g set-titles-string "tmux:#I [ #W ]"
+set-option -g set-titles-string "#I"
 # In order to use scripts these have to be in a folder in the PATH variable.
 # Binding like screen
+
+
+# pane movement
+bind-key S command-prompt -p "join pane from:"  "join-pane -s '%%'"
+#bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+
 
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
 # Copy into the X clipboard
-bind-key C-C run 'tmux show-buffer|xsel -pbi'
+#bind-key C-C run 'tmux show-buffer|xsel -pbi'
 
 # Custom command bindings
-bind 'e' new-window "exec vi ~/.tmux.conf"
+bind 'e' new-window "exec vim ~/.tmux.conf"
 bind C-n next-window
 bind C-p previous-window
 
 # Default options
-bind r source-file  ~/.tmux.conf
-set -g history-limit 5000
-#setw -g mode-keys vi
-setw -g mode-mouse off
+bind r source-file  ~/.tmux.conf; display "Configuration reload..."
+set -g history-limit 25000
+# set-option -g mode-mouse o
 set -g visual-bell on
 set -g base-index 1
 setw -g pane-base-index 1
@@ -37,10 +43,16 @@ set -g status-interval 30
 set -g status-left-length 50 
 
 # Status bar position and what to show (scripts)
-set -g status-justify centre
-set -g status-left '#[fg=black]» #[fg=green,bold]#T# #[fg=white]'
-set -g status-right '#[bg=black]#[fg=green,bold] [%m/%d %H:%M]'
+set-option -g status-position top
+set -g status-justify left
 
+# status format
+set-option -g status-bg colour235
+set-option -g status-fg colour1
+
+set -g window-status-format "#[fg=colour232]#{?window_activity_flag,#[bg=colour117] #I ,#[bg=colour12] #I }#[default]#[fg=colour246,bg=colour235] #{?window_bell_flag,#[fg=colour1]!#[fg=colour0]#[bg=colour1],}#{=-15:window_name}#[default] "
+set -g window-status-activity-style ""
+set -g window-status-current-format "#[fg=colour235,bg=colour154] #I #[fg=colour255,bg=colour235] #{?pane_synchronized,#[fg=red]SYNC #[default],}#{=-20:window_name} #[default]"
 
 # Active window title colors (default: white, default, bright (= bold))
 set-window-option -g window-status-current-fg white
@@ -74,16 +86,6 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 
-# Disabled
-# setw -g window-status-fg red
-# setw -g window-status-bg black
-# bind C-v split-window -h
-# bind C-s split-window -v
-
-# bind v split-window -h
-# bind s split-window -v
-# unbind '"'
-# unbind %
 set-option -g allow-rename off
 
 # Vim-tmux navigator plugin
