--- a/desktop/config/i3/config
+++ b/desktop/config/i3/config
@@ -36,6 +36,9 @@ bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
 bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
 bindsym XF86AudioMute exec amixer -D pulse set Master 1+ toggle
 
+# Displays
+bindsym $mod+Shift+u exec /home/sgm/.screenlayout/unplug_laptop.sh
+bindsym $mod+Shift+x exec /home/sgm/.screenlayout/both_displays_active.sh
 
 #
 # Applications
