--- a/desktop/config/i3/config
+++ b/desktop/config/i3/config
@@ -29,7 +29,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+d exec $menu
 
 # lock screen
-bindsym $mod+Shift+l exec $lock -c 111111
+bindsym $mod+Shift+Escape exec $lock -c 111111
 
 # keyboard lang
 bindsym $mod+Shift+p exec setxkbmap es
