--- a/desktop/config/i3/config
+++ b/desktop/config/i3/config
@@ -65,6 +65,7 @@ bindsym $mod+Shift+q kill
 # Increase volume
 bindsym $mod+Prior exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym $mod+Next exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym $mod+Pause exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 
 # bindsym $mod+d exe
