--- a/desktop/config/polybar/config
+++ b/desktop/config/polybar/config
@@ -28,9 +28,11 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/bar]
+
 ;monitor = ${env:MONITOR:DisplayPort-1}
 width = 100%
-height = 35 
+height = 55 
+dpi = 230
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
@@ -46,16 +48,17 @@ line-color = #f00
 border-size = 4
 border-color = #00000000
 
+padding-top = 2
 padding-left = 0
 padding-right = 2
 
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=13;1
+font-0 = fixed:pixelsize=12;1
 ; font-0 = Inconsolata:pixelsize=13;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=13;1
+; font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
+; font-2 = siji:pixelsize=13;1
 
 modules-left = i3
 modules-center = 
