i3: set alacritty and rofi

--- a/desktop/config/i3/config
+++ b/desktop/config/i3/config
@@ -9,13 +9,14 @@
 # Vars 
 ##########
 set $mod Mod4
-set $menu   rofi -show drun -theme solarized -font "hackNF 12" -width  20
-set $terminal alacritty -e zsh
+set $menu   rofi -show drun -theme solarized -font "hackNF 20" -width  20
+set $terminal alacritty -e fish
 set $lock i3lock
 
 for_window [class="^.*"] border pixel 1
-gaps inner 5
-gaps outer 5
+gaps inner 15
+gaps outer 1
+
 
 # Startup apps
 exec --no-startup-id /usr/bin/dropbox start -i
@@ -175,23 +176,23 @@ bindsym $mod+r mode "resize"
 
 
 ## Bar configuration
-bar {
-	#height 25
-	#status_command i3status --config  ~/.config/i3/status.conf
+#bar {
+#	#height 25
+#	status_command i3status --config  ~/.config/i3/status.conf
 	
-	position top
-        tray_output none
-	font pango:DejaVu Sans Mono  14
-	status_command i3blocks -c ~/.config/i3/blocks.conf
+#	position top
+#        tray_output none
+#	font pango:DejaVu Sans Mono  14
+#	status_command i3blocks -c ~/.config/i3/blocks.conf
 
-	workspace_buttons yes
-        tray_output primary
+#	workspace_buttons yes
+#        tray_output primary
 
-	colors {
-		background #222222
-		focused_workspace #A00 #FFFF00 #000
-	   }
-}
+#	colors {
+#		background #222222
+#		focused_workspace #A00 #FFFF00 #000
+#	   }
+#}
 
 # Disabled
 
