shell: switch to fish

--- a/desktop/config/i3/config
+++ b/desktop/config/i3/config
@@ -10,7 +10,7 @@
 ##########
 set $mod Mod4
 set $menu   rofi -show drun -theme solarized -font "hackNF 12" -width  20
-set $terminal alacritty -e zsh
+set $terminal alacritty -e fish
 set $lock i3lock
 
 for_window [class="^.*"] border pixel 1
