--- a/desktop/config/polybar/config
+++ b/desktop/config/polybar/config
@@ -32,7 +32,7 @@ alert = #bd2c40
 ;monitor = ${env:MONITOR:DisplayPort-1}
 width = 100%
 height = 55 
-dpi = 230
+dpi = 150
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
@@ -43,6 +43,7 @@ foreground = ${colors.foreground}
 
 line-size = 3
 line-color = #f00
+#line-color = #ff0000
 
 
 border-size = 4
