--- a/desktop/config/i3/config
+++ b/desktop/config/i3/config
@@ -3,13 +3,19 @@
 # 	https://github.com/jessfraz/dotfiles
 # 
 #############################################
+#
+##
+## EXPERIMENTAL
+#
 
+# REF: transparency, compiled from source 
+exec --no-startup-id picom -CGb
 
 #
 # Vars 
 ##########
 set $mod Mod4
-set $menu   rofi -show drun -theme solarized -font "hackNF 20" -width  20
+set $menu rofi -show drun -font "hackNF 20" -width  10
 set $terminal alacritty -e fish
 set $lock i3lock
 
