--- a/desktop/config/polybar/config
+++ b/desktop/config/polybar/config
@@ -56,14 +56,14 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=12;1
-; font-0 = Inconsolata:pixelsize=13;1
+;font-0 = fixed:pixelsize=18;1
+font-0 = Inconsolata:pixelsize=13;1
 ; font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-2 = siji:pixelsize=13;1
 
 modules-left = i3
 modules-center = 
-modules-right = spotify pulseaudio xkeyboard wlan
+modules-right = spotify pulseaudio xkeyboard battery wlan
 # ;wireless-network wlan
 ;modules-right = pulseaudio xkeyboard memory cpu wlan eth 
 
